--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -232,6 +232,14 @@
             </div>
         </div>
         <div class="container">
+                        <!-- ========== slider arrow  ========== -->
+            <p class="our-arrow-l"><span class="our-icons "><a><i
+                            class="fa fa-chevron-left prv-arrow"></i></a></span>
+            </p>
+            <p class="our-arrow-r"><span class="our-icons "><a><i
+                            class="fa fa-chevron-right nxt-arrow"></i></a></span>
+            </p>
+            <!-- ========== slider arrow  ========== -->
             <div class="row team-slider">
                 <div class="col-lg-4 team-items">
                     <div class="team-img text-center">
