--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -96,12 +96,12 @@
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./about-us/about-us.html">About Us</a>
+                            <a class="nav-link" href="about-us.html">About Us</a>
                         </li>
                         <li>
                             <a class="nav-link" href="#">Pages</a>
                             <ol>
-                                <li><a href="#">Blog list page</a></li>
+                                <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
                                 <li><a href="#">Blog details page</a></li>
                                 <li><a href="#">Error-page</a></li>
                                 <li><a href="#">Coming-Soon-page</a></li>
@@ -366,7 +366,8 @@
 
 
     <!-- ========== footer section Starts here  ========== -->
-    <section id="footer">
+    <div class="bottom-footer">
+        <section id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 footer-one">
@@ -457,6 +458,7 @@
         </div>
         </div>
     </section>
+    </div>
     <!-- ========== footer section Ends here ========== -->
 
     <!-- ========== copyright section starts here  ========== -->
