--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <li>
                             <a class="nav-link" href="#">Pages</a>
                             <ol>
-                                <li><a href="#">Blog list page</a></li>
+                                <li><a href="./blog-list-view/blog-list-view.html">Blog list page</a></li>
                                 <li><a href="#">Blog details page</a></li>
                                 <li><a href="#">Error-page</a></li>
                                 <li><a href="#">Coming-Soon-page</a></li>
