--- a/blog-list-view/blog-list-view.html
+++ b/blog-list-view/blog-list-view.html
@@ -556,6 +556,37 @@
                                 <li><a href="#">Contruct</a></li>
                             </ul>
                         </div>
+
+                        <div class="video-attatch">
+                            <img src="../assets/images/vdo-img.jpg" class="img-fluid" alt="">
+
+                            <!-- Button trigger modal -->
+
+                            <div class="video-attatch-overlay">
+                                <i class="fa fa-play" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
+                            </div>
+                            
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body modal-body-custom">
+                                            <iframe src="https://www.youtube.com/embed/aOZhbOhEunY"
+                                                allowfullscreen=""></iframe>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="blog-button-bottom">
                         <a href="#">NEXT PAGE</a>
