--- a/blog-details-view/blog-details-view.html
+++ b/blog-details-view/blog-details-view.html
@@ -101,8 +101,8 @@
                         <li>
                             <a class="nav-link" href="#">Pages</a>
                             <ol>
-                                <li><a href="blog-list-view.html">Blog list page</a></li>
-                                <li><a href="../blog-details-view/blog-details-view.html">Blog details page</a></li>
+                                <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
+                                <li><a href="blog-details-view.html">Blog details page</a></li>
                                 <li><a href="#">Error-page</a></li>
                                 <li><a href="#">Coming-Soon-page</a></li>
                             </ol>
@@ -140,14 +140,14 @@
         <div class="container">
             <div class="row ">
                 <div class="col-lg-12 about-us-bg-items text-center">
-                    <h2>BLOG LIST VIEW</h2>
+                    <h2>BLOG DETAILS VIEW</h2>
                     <a href="../index.html">Home</a>
                     <div class="about-bg-arrow">
 
                         <i class="fa fa-chevron-right nxt-arrow"><i class="fa fa-chevron-right nxt-arrow"></i></i>
 
                     </div>
-                    <span><a href="./about-us.html">Blog List View</a></span>
+                    <span><a href="./about-us.html">Blog - Details</a></span>
                 </div>
             </div>
         </div>
@@ -213,80 +213,132 @@
 
             <div class="blog-img-text-content">
                 <div class="row">
-                    <div class="col-lg-8 ">
-                        <div class="blog-main">
-                            <div class="blog-image">
+                    <div class="col-lg-8">
+                        <div class="blogspot">
+                            <div class="blogspot-img">
                                 <img src="../assets/images/blogsingle_img.jpg" class="img-fluid" alt="">
                             </div>
-                            <div class="blog-image-text">
-                                <h3>Finding New Buildings in the Dust of the Old Never Seen Before</h3>
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-user"></i> By:Admin</a></li>
-                                    <li><a href="#"><i class="fa fa-thumbs-up"></i> 2.5k likes</a></li>
-                                    <li><a href="#"><i class="fa fa-comments"></i> 1.5k Comments</a></li>
-                                </ul>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsumas been the duy's standard dummy text ever since the 1500s, when an unknown
-                                    printer took a galley of type and scrabled it to make a type specimen book. It has
-                                    survived not only fiventuries, but also the leap into electronicting, ning
-                                    essentially unchanged. It was popularised in the 1960s with the release year.</p>
-
-                                <div class="blog-text-button">
-                                    <a href="#"> READ MORE </a>
+                            <div class="blogspot-description">
+                                <h5>Finding New Buildings In The Dust Of The Old Never Seen Before</h5>
+                                <div class="blogspot-icons">
+                                    <div class="left-blog-icon">
+                                        <a href="#"><i class="fa fa-user"></i> <span>by admin</span></a>
+                                    </div>
+                                    <div class="right-blog-icon">
+                                        <a href="#"><i class="fa fa-thumbs-o-up"></i><span> 2.1k likes</span></a>
+                                        <a href="#"><i class="fa fa-comment"></i><span> 17 comments</span></a>
+                                    </div>
                                 </div>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsumas
+                                    been the duy's stadard dummy text ever since the 1500s, when an unknown printer took
+                                    a
+                                    galley of type and scrabled it to make a typeen book. It has survived not only five
+                                    centuries, but also the leap into electronicting. Lorem Ipsum is simply dummy xt of
+                                    the
+                                    printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing
+                                    and
+                                    typesetting industry. Lorem Ipsumas been the duy's stadard dummy text ever since the
+                                    1500s, when an unknown printer took a galley of type and scrabled it to make a
+                                    typeen
+                                    book. It has survived not only five centuries, but also the leap into electroing.
+                                    Lorem
+                                    Ipsum is simply dummy text of the printing and</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsumas
+                                    been the duy's stadard dummy text ever since the 1500s, when an unknown printer took
+                                    a
+                                    galley of type and scrabled it to make a typeen book. It has survived not only five
+                                    centuries, but also the leap into electronicting. Lorem Ipsum is simply dummy text
+                                    of
+                                    the printing and.</p>
+                                <div class="bordered-p">
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                        Ipsumas been the duy's stadard dummy text ever since the 1500s, when an unknown
+                                        printer took a galley.</p>
+                                </div>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsumas
+                                    been the duy's stadard dummy text ever since the 1500s, when an unknown printer took
+                                    a
+                                    galley of type and scrabled it to make a typeen book. It has survived not only five
+                                    centuries, but also the leap into electronicting. Lorem Ipsum is simply dummy xt of
+                                    the
+                                    printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing
+                                    and
+                                    typesetting industry. Lorem Ipsumas been the duy's stadard dummy text ever since the
+                                    1500s, when an unknown printer took a galley of type and scrabled it to make a
+                                    typeen
+                                    book. It has survived not only five centuries, but also the leap into electroing.
+                                    Lorem
+                                    Ipsum is simply dummy text of the printing and</p>
+                                <span class="bottom-comment">14 Comments</span>
+                            </div>
 
+                            <div class="blogspot-comment-section">
+                                <div class="blospot-comments">
+                                    <div class="blogspot-left">
+                                        <img src="../assets/images/blog_details_media.jpg" alt="">
+                                    </div>
+                                    <div class="blogspot-right">
+                                        <h4>Mahadi Tahsan <span>Posted On: 26 October 2017</span></h4>
+                                        <p>hen after before symphony book.Lorem Ipsum has beenry's staardummy text ever
+                                            since the.Lom Ipsum is simply dummy text of thenting and we typng industry.
+                                        </p>
+                                        <a href="#"><i class="fa fa-reply-all"></i> Reply</a>
+
+                                        <div class="blospot-comments border-0">
+                                            <div class="blogspot-left">
+                                                <img src="../assets/images/blog_details_media.jpg" alt="">
+                                            </div>
+                                            <div class="blogspot-right">
+                                                <h4>Md.Iqbal Ahmed <span>Posted On: 26 October 2017</span></h4>
+                                                <p>hen after before symphony book.Lorem Ipsum has beenry's staardummy
+                                                    text ever since the.Lom Ipsum is simply dummy text of thenting and
+                                                    we typng industry.</p>
+                                                <a href="#"><i class="fa fa-reply-all"></i> Reply</a>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="blospot-comments">
+                                    <div class="blogspot-left">
+                                        <img src="../assets/images/blog_details_media.jpg" alt="">
+                                    </div>
+                                    <div class="blogspot-right">
+                                        <h4>Aminul Islam <span>Posted On: 26 October 2017</span></h4>
+                                        <p>hen after before symphony book.Lorem Ipsum has beenry's staardummy text ever
+                                            since the.Lom Ipsum is simply dummy text of thenting and we typng industry.
+                                        </p>
+                                        <a href="#"><i class="fa fa-reply-all"></i> Reply</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="leave-a-reply">
+                                <h4>Leave A Reply</h4>
+                                <form action="">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <input type="text" class="form-control" placeholder="Name">
+
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <input type="text" class="form-control" placeholder="Email">
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <textarea name="" placeholder="Your Message" class="form-control" id=""
+                                                rows="6"></textarea>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <div class="blog-button-bottom">
+                                                <a href="#">SUBMIT</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-
-                        <div class="blog-main">
-                            <div class="blog-image">
-                                <img src="../assets/images/blogsingle_img1.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="blog-image-text">
-                                <h3>Finding New Buildings in the Dust of the Old Never Seen Before</h3>
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-user"></i> By:Admin</a></li>
-                                    <li><a href="#"><i class="fa fa-thumbs-up"></i> 2.5k likes</a></li>
-                                    <li><a href="#"><i class="fa fa-comments"></i> 1.5k Comments</a></li>
-                                </ul>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsumas been the duy's standard dummy text ever since the 1500s, when an unknown
-                                    printer took a galley of type and scrabled it to make a type specimen book. It has
-                                    survived not only fiventuries, but also the leap into electronicting, ning
-                                    essentially unchanged. It was popularised in the 1960s with the release year.</p>
-
-                                <div class="blog-text-button">
-                                    <a href="#"> READ MORE </a>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="blog-main">
-                            <div class="blog-image">
-                                <img src="../assets/images/blogsingle_img2.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="blog-image-text">
-                                <h3>Finding New Buildings in the Dust of the Old Never Seen Before</h3>
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-user"></i> By:Admin</a></li>
-                                    <li><a href="#"><i class="fa fa-thumbs-up"></i> 2.5k likes</a></li>
-                                    <li><a href="#"><i class="fa fa-comments"></i> 1.5k Comments</a></li>
-                                </ul>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsumas been the duy's standard dummy text ever since the 1500s, when an unknown
-                                    printer took a galley of type and scrabled it to make a type specimen book. It has
-                                    survived not only fiventuries, but also the leap into electronicting, ning
-                                    essentially unchanged. It was popularised in the 1960s with the release year.</p>
-
-                                <div class="blog-text-button">
-                                    <a href="#"> READ MORE </a>
-                                </div>
-
-                            </div>
-                        </div>
-
-
                     </div>
                     <div class="col-lg-4">
                         <ul class="nav nav-pills tab-main mb-3" id="pills-tab" role="tablist">
@@ -562,7 +614,7 @@
                             <div class="video-attatch-overlay">
                                 <i class="fa fa-play" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
                             </div>
-                            
+
 
                             <!-- Modal -->
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -585,9 +637,7 @@
                         </div>
 
                     </div>
-                    <div class="blog-button-bottom">
-                        <a href="#">NEXT PAGE</a>
-                    </div>
+
                 </div>
             </div>
 
