--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto toggle-navbar">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./about-us/about-us.html">About Us</a>
@@ -103,7 +103,7 @@
                             <a class="nav-link" href="#">Pages</a>
                             <ol>
                                 <li><a href="./blog-list-view/blog-list-view.html">Blog list page</a></li>
-                                <li><a href="#">Blog details page</a></li>
+                                <li><a href="./blog-details-view/blog-details-view.html">Blog details page</a></li>
                                 <li><a href="#">Error-page</a></li>
                                 <li><a href="#">Coming-Soon-page</a></li>
                             </ol>
