--- a/blog-details-view/blog-details-view.html
+++ b/blog-details-view/blog-details-view.html
@@ -103,8 +103,8 @@
                             <ol>
                                 <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
                                 <li><a href="blog-details-view.html">Blog details page</a></li>
-                                <li><a href="#">Error-page</a></li>
-                                <li><a href="#">Coming-Soon-page</a></li>
+                                <li><a href="../error-page/error-page.html">Error-page</a></li>
+                                <li><a href="../coming-soon-page/coming-soon-page.html">Coming-Soon-page</a></li>
                             </ol>
                         </li>
                         <li class="nav-item">
