--- a/blog-details-view/blog-details-view.html
+++ b/blog-details-view/blog-details-view.html
@@ -108,14 +108,14 @@
                             </ol>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
                         </li>
                         <li>
                             <a class="nav-link" href="#">Our Blog</a>
                             <ol>
-                                <li><a href="#">Blog grid page</a></li>
-                                <li><a href="#">Blog list page</a></li>
-                                <li><a href="#">Blog details page</a></li>
+                                <li><a href="../blog-grid-view/blog-grid-view.html">Blog grid page</a></li>
+                                <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
+                                <li><a href="blog-details-view/blog-details-view.html">Blog details page</a></li>
                             </ol>
                         </li>
                         <li class="nav-item">
