--- a/contact-us/contact.html
+++ b/contact-us/contact.html
@@ -20,9 +20,6 @@
     <!-- ========== slick slider ========== -->
     <link rel="stylesheet" href="../assets/css/slick.css">
     <!-- ========== slick slider ========== -->
-    <!-- ========== animate css  ========== -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!-- ========== animate css  ========== -->
     <!-- ========== main css ========== -->
     <link rel="stylesheet" href="../assets/css/style.css">
     <!-- ========== main css ========== -->
@@ -105,8 +102,8 @@
                             <a class="nav-link" href="#">Pages</a>
                             <ol>
                                 <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
-                                <li><a href="../blog-details-view/blog-details-view.html">Blog details page</a></li>
-                                <li><a href="error-page.html">Error-page</a></li>
+                                <li><a href="blog-details-view.html">Blog details page</a></li>
+                                <li><a href="../error-page/error-page.html">Error-page</a></li>
                                 <li><a href="../coming-soon-page/coming-soon-page.html">Coming-Soon-page</a></li>
                             </ol>
                         </li>
@@ -118,7 +115,7 @@
                             <ol>
                                 <li><a href="../blog-grid-view/blog-grid-view.html">Blog grid page</a></li>
                                 <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
-                                <li><a href="../blog-details-view/blog-details-view.html">Blog details page</a></li>
+                                <li><a href="blog-details-view/blog-details-view.html">Blog details page</a></li>
                             </ol>
                         </li>
                         <li class="nav-item">
@@ -143,134 +140,153 @@
         <div class="container">
             <div class="row ">
                 <div class="col-lg-12 about-us-bg-items text-center">
-                    <h2>404 PAGE</h2>
+                    <h2>CONTACT US</h2>
                     <a href="../index.html">Home</a>
                     <div class="about-bg-arrow">
 
                         <i class="fa fa-chevron-right nxt-arrow"><i class="fa fa-chevron-right nxt-arrow"></i></i>
 
                     </div>
-                    <span><a href="./about-us.html">404 Page</a></span>
+                    <span><a href="#">Contact Us</a></span>
                 </div>
             </div>
         </div>
     </section>
     <!-- ========== about bg section ends here  ========== -->
 
-    <!-- ========== error section starts here ========== -->
-    <section id="error">
+    <!-- ========== contact us icon section starts here ========== -->
+    <section id="contact-us-icon">
         <div class="container">
-            <div class="col-lg-12">
-                <div class="error-content">
-                    <div class="error-img text-center">
-                        <img src="../assets/images/404.png" class="img-fluid" alt="">
+            <div class="row contact-us-address text-center">
+                <div class="col-lg-4">
+                    <i class="fa fa-map-marker"></i>
+                    <div class="contact-us-desc">
+                        <p>69, Halsey st. New York, NY 10002, Park street Avenue United Staes (US).</p>
                     </div>
-                    <div class="error-text">
-                        <h1 class="animate__animated animate__swing animate__infinite">404</h1>
+
+                </div>
+                <div class="col-lg-4">
+                    <i class="fa fa-envelope"></i>
+                    <div class="contact-us-desc">
+                        <p>
+                            <a href="#">Produstry@industry.com</a> ,
+                            <a href="#">industry@produstry.com</a>,
+                            <a href="#">Admin@info.com</a>,
+                            <a href="#">info@admin.com</a>
+                        </p>
                     </div>
+
+                </div>
+                <div class="col-lg-4">
+                    <i class="fa fa-globe"></i>
+                    <div class="contact-us-desc">
+                        <p class="last-address">
+                            <a href="#">www.produstry-industry.com</a>,
+                            <a href="#">www.produstry-info.com</a>,
+                            <a href="#">www.production-industry.com</a>
+                        </p>
+                    </div>
+
                 </div>
             </div>
         </div>
-
     </section>
-    <!-- ========== error section ends here ========== -->
+
+    <!-- ========== contact us icon section ends here  ========== -->
 
     <!-- ========== footer section Starts here  ========== -->
-    <div class="error-footer">
-        <section id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 footer-one">
-                        <a href="#"><img src="../assets/images/footer-logo.png" class="img-fluid" alt=""></a>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been
-                            the industry's. unknown printer took a galley of type and scrambled it to make a type.</p>
-                        <div class="footer-icons">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+    <section id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 footer-one">
+                    <a href="#"><img src="../assets/images/footer-logo.png" class="img-fluid" alt=""></a>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's. unknown printer took a galley of type and scrambled it to make a type.</p>
+                    <div class="footer-icons">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 footer-two">
+                    <h3>Contact Us</h3>
+                    <div class="address">
+                        <div class="icon-add">
+                            <a href="#"><i class="fa fa-map-marker"></i></a>
+                        </div>
+                        <div class="info-add">
+                            <a href="#">1234, Park Street Avenue,</a>
+                            <a href="#">NewYork City North America.</a>
                         </div>
                     </div>
-                    <div class="col-lg-3 footer-two">
-                        <h3>Contact Us</h3>
-                        <div class="address">
-                            <div class="icon-add">
-                                <a href="#"><i class="fa fa-map-marker"></i></a>
-                            </div>
-                            <div class="info-add">
-                                <a href="#">1234, Park Street Avenue,</a>
-                                <a href="#">NewYork City North America.</a>
-                            </div>
+                    <div class="address address-mid">
+                        <div class="icon-add">
+                            <a href="#"><i class="fa fa-phone"></i></a>
                         </div>
-                        <div class="address address-mid">
-                            <div class="icon-add">
-                                <a href="#"><i class="fa fa-phone"></i></a>
-                            </div>
-                            <div class="info-add">
-                                <a href="#">1234, Park Street Avenue,</a>
-                                <a href="#">NewYork City North America.</a>
-                            </div>
-                        </div>
-                        <div class="address">
-                            <div class="icon-add">
-                                <a href="#"><i class="fa fa-envelope"></i></a>
-                            </div>
-                            <div class="info-add">
-                                <a href="#">1234, Park Street Avenue,</a>
-                                <a href="#">NewYork City North America.</a>
-                            </div>
+                        <div class="info-add">
+                            <a href="#">1234, Park Street Avenue,</a>
+                            <a href="#">NewYork City North America.</a>
                         </div>
                     </div>
-                    <div class="col-lg-2 footer-three">
-                        <h3>Important Links</h3>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About US</a></li>
-                            <li><a href="#">Our work</a></li>
-                            <li><a href="#">Our Blogs</a></li>
-                            <li><a href="#">Our Pages</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                        </ul>
+                    <div class="address">
+                        <div class="icon-add">
+                            <a href="#"><i class="fa fa-envelope"></i></a>
+                        </div>
+                        <div class="info-add">
+                            <a href="#">1234, Park Street Avenue,</a>
+                            <a href="#">NewYork City North America.</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 footer-three">
+                    <h3>Important Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About US</a></li>
+                        <li><a href="#">Our work</a></li>
+                        <li><a href="#">Our Blogs</a></li>
+                        <li><a href="#">Our Pages</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
 
-                    </div>
-                    <div class="col-lg-4 footer-four">
-                        <h3>Latest News</h3>
-                        <div class="footer-news">
-                            <div class="footer-news-img">
-                                <img src="../assets/images/latest_news_small.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="footer-news-info">
-                                <p>Nice Newest Construction Factory Work</p>
-                                <span>26 October 2017</span>
-                                <div class="footer-news-likes">
-                                    <a href="#"><i class="fa fa-user"></i> By : Admin</a>
-                                    <a href="#"><i class="fa fa-thumbs-up"></i> 2.5k likes</a>
-                                </div>
+                </div>
+                <div class="col-lg-4 footer-four">
+                    <h3>Latest News</h3>
+                    <div class="footer-news">
+                        <div class="footer-news-img">
+                            <img src="../assets/images/latest_news_small.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="footer-news-info">
+                            <p>Nice Newest Construction Factory Work</p>
+                            <span>26 October 2017</span>
+                            <div class="footer-news-likes">
+                                <a href="#"><i class="fa fa-user"></i> By : Admin</a>
+                                <a href="#"><i class="fa fa-thumbs-up"></i> 2.5k likes</a>
                             </div>
                         </div>
-                        <div class="footer-news">
-                            <div class="footer-news-img">
-                                <img src="../assets/images/latest_news_small01.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="footer-news-info">
-                                <p>Nice Newest Construction Factory Work</p>
-                                <span>26 October 2017</span>
-                                <div class="footer-news-likes">
-                                    <a href="#"><i class="fa fa-user"></i> By : Admin</a>
-                                    <a href="#"><i class="fa fa-thumbs-up"></i> 2.5k likes</a>
-                                </div>
+                    </div>
+                    <div class="footer-news">
+                        <div class="footer-news-img">
+                            <img src="../assets/images/latest_news_small01.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="footer-news-info">
+                            <p>Nice Newest Construction Factory Work</p>
+                            <span>26 October 2017</span>
+                            <div class="footer-news-likes">
+                                <a href="#"><i class="fa fa-user"></i> By : Admin</a>
+                                <a href="#"><i class="fa fa-thumbs-up"></i> 2.5k likes</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
             </div>
-        </section>
-    </div>
 
+
+        </div>
+    </section>
+    </div>
     <!-- ========== footer section Ends here ========== -->
 
     <!-- ========== copyright section starts here  ========== -->
