--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -20,9 +20,6 @@
     <!-- ========== slick slider ========== -->
     <link rel="stylesheet" href="../assets/css/slick.css">
     <!-- ========== slick slider ========== -->
-    <!-- ========== animate css  ========== -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!-- ========== animate css  ========== -->
     <!-- ========== main css ========== -->
     <link rel="stylesheet" href="../assets/css/style.css">
     <!-- ========== main css ========== -->
@@ -84,7 +81,6 @@
 
     <!-- ========== bottom header starts here========== -->
     <section id="bottomheader">
-
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
                 <a class="navbar-brand toggle-brand" href="#"><img src="../assets/images/logo.png" alt=""></a>
@@ -106,12 +102,12 @@
                             <ol>
                                 <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
                                 <li><a href="../blog-details-view/blog-details-view.html">Blog details page</a></li>
-                                <li><a href="error-page.html">Error-page</a></li>
+                                <li><a href="../error-page/error-page.html">Error-page</a></li>
                                 <li><a href="../coming-soon-page/coming-soon-page.html">Coming-Soon-page</a></li>
                             </ol>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                         <li>
                             <a class="nav-link" href="#">Our Blog</a>
@@ -143,40 +139,257 @@
         <div class="container">
             <div class="row ">
                 <div class="col-lg-12 about-us-bg-items text-center">
-                    <h2>404 PAGE</h2>
+                    <h2>PORTFOLIO</h2>
                     <a href="../index.html">Home</a>
                     <div class="about-bg-arrow">
 
                         <i class="fa fa-chevron-right nxt-arrow"><i class="fa fa-chevron-right nxt-arrow"></i></i>
 
                     </div>
-                    <span><a href="./about-us.html">404 Page</a></span>
+                    <span><a href="./about-us.html">Portfolio</a></span>
                 </div>
             </div>
         </div>
     </section>
     <!-- ========== about bg section ends here  ========== -->
 
-    <!-- ========== error section starts here ========== -->
-    <section id="error">
+    <!-- ========== our portfolio starts here ========== -->
+    <section id="portfolio">
         <div class="container">
-            <div class="col-lg-12">
-                <div class="error-content">
-                    <div class="error-img text-center">
-                        <img src="../assets/images/404.png" class="img-fluid" alt="">
+
+
+            <div class="row flex-wrap">
+                <div class="col-lg-3 portfolio-item">
+                    <div class="portfolio-img portfolio-img-custom">
+                        <img src="../assets/images/work01.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-overlay">
+                            <h4>Architectural</h4>
+                            <p>Building/Architect</p>
+                        </div>
                     </div>
-                    <div class="error-text">
-                        <h1 class="animate__animated animate__swing animate__infinite">404</h1>
+                </div>
+                <div class="col-lg-3 portfolio-item">
+                    <div class="portfolio-img  portfolio-img-custom">
+                        <img src="../assets/images/work02.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-overlay">
+                            <h4>Sketch</h4>
+                            <p>Building/Architect</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 portfolio-item">
+                    <div class="portfolio-img portfolio-img-custom">
+                        <img src="../assets/images/work03.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-overlay">
+                            <h4>Renderring</h4>
+                            <p>Building/Architect</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 portfolio-item">
+                    <div class="portfolio-img portfolio-img-custom">
+                        <img src="../assets/images/work04.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-overlay">
+                            <h4>Reconstruction</h4>
+                            <p>Building/Architect</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 portfolio-item">
+                    <div class="portfolio-img portfolio-img-custom">
+                        <img src="../assets/images/work02.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-overlay">
+                            <h4>Sketch</h4>
+                            <p>Building/Architect</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 portfolio-item">
+                    <div class="portfolio-img portfolio-img-custom">
+                        <img src="../assets/images/work01.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-overlay">
+                            <h4>Architectural</h4>
+                            <p>Building/Architect</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 portfolio-item">
+                    <div class="portfolio-img portfolio-img-custom">
+                        <img src="../assets/images/work02.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-overlay">
+                            <h4>Sketch</h4>
+                            <p>Building/Architect</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 portfolio-item">
+                    <div class="portfolio-img portfolio-img-custom">
+                        <img src="../assets/images/work03.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-overlay">
+                            <h4>Renderring</h4>
+                            <p>Building/Architect</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-12">
+                <div class="animated-button text-center">
+                    <a href="#">LOAD MORE <i class="fa fa-refresh fa-spin"></i></a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- ========== our portfolio ends here ========== -->
+
+
+    <!-- ========== our team section starts here  ========== -->
+    <section id="our-team">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="our-team-heading text-center">
+                        <h2>Our Team</h2>
+                        <span>We provide you a better service. you have no complain about our <p>service, it’s
+                                guaranteed.</p></span>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container">
+            <!-- ========== slider arrow  ========== -->
+            <p class="our-arrow-l"><span class="our-icons "><a><i class="fa fa-chevron-left prv-arrow"></i></a></span>
+            </p>
+            <p class="our-arrow-r"><span class="our-icons "><a><i class="fa fa-chevron-right nxt-arrow"></i></a></span>
+            </p>
+            <!-- ========== slider arrow  ========== -->
+            <div class="row team-slider">
+                <div class="col-lg-4 team-items">
+                    <div class="team-img text-center">
+                        <img src="../assets/images/our-team1.png" class="img-fluid" alt="">
+                    </div>
+                    <div class="team-info text-center">
+                        <div class="team-info-animate">
+                            <h4>Sahid patowary </h4>
+                            <span>Head Architect</span>
+                            <ul>
+                                <li>
+                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-behance"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
+                </div>
+                <div class="col-lg-4 team-items">
+                    <div class="team-img text-center">
+                        <img src="../assets/images/our-team2.png" class="img-fluid" alt="">
+                    </div>
+                    <div class="team-info text-center">
+                        <div class="team-info-animate">
+                            <h4>Jemina Skelley </h4>
+                            <span>Head Architect</span>
+                            <ul>
+                                <li>
+                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-behance"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-4 team-items">
+                    <div class="team-img text-center">
+                        <img src="../assets/images/our-team3.png" class="img-fluid" alt="">
+                    </div>
+                    <div class="team-info text-center">
+                        <div class="team-info-animate">
+                            <h4>Monica Brown </h4>
+                            <span>Head Architect</span>
+                            <ul>
+                                <li>
+                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-behance"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-4 team-items">
+                    <div class="team-img text-center">
+                        <img src="../assets/images/our-team4.png" class="img-fluid" alt="">
+                    </div>
+                    <div class="team-info text-center">
+                        <div class="team-info-animate">
+                            <h4>Arif Mahmud </h4>
+                            <span>Head Architect</span>
+                            <ul>
+                                <li>
+                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-behance"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </section>
-    <!-- ========== error section ends here ========== -->
+
+    <!-- ========== our team section ends here  ========== -->
 
     <!-- ========== footer section Starts here  ========== -->
-    <div class="error-footer">
+    <div class="bottom-footer">
         <section id="footer">
             <div class="container">
                 <div class="row">
@@ -266,11 +479,10 @@
                     </div>
                 </div>
 
-
             </div>
-        </section>
     </div>
-
+    </section>
+    </div>
     <!-- ========== footer section Ends here ========== -->
 
     <!-- ========== copyright section starts here  ========== -->
