--- a/contact-us/contact.html
+++ b/contact-us/contact.html
@@ -191,8 +191,40 @@
             </div>
         </div>
     </section>
-
     <!-- ========== contact us icon section ends here  ========== -->
+
+    <!-- ========== map section starts here  ========== -->
+    <section id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29513.4591798765!2d91.84156944656867!3d22.38448033997321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30ad27bb88c113ed%3A0x896080bb984bf6ff!2s4%20No.%20Chandgaon%20Ward%2C%20Chattogram!5e0!3m2!1sen!2sbd!4v1650623299115!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <i class="fa fa-map-marker"></i>
+    </section>
+    <!-- ========== map section ends here  ========== -->
+
+    <!-- ========== newsletter section starts here  ========== -->
+    <section id="newsletter">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 news-heading text-center">
+                    <h2>Sign up for Newsletter</h2>
+                    <p>We provide you a better service. you have no complain about our <br> service, it’s guaranteed.</p>
+                </div>
+            </div>
+            <div class="news-form row">
+                
+                <div class="col-lg-5 offset-6 ">
+                    <form action="">
+                    <input class="form-control" type="text" placeholder="Name">
+                    <input class="form-control" type="text" placeholder="Email">
+                    <textarea class="form-control" name=""  placeholder="Message" id="" cols="30" ></textarea>
+                    <button type="submit">SUBMIT</button>
+                </form>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    
+    <!-- ========== newsletter section starts here  ========== -->
 
     <!-- ========== footer section Starts here  ========== -->
     <section id="footer">
