--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -80,16 +80,79 @@
     <!-- ========== top header starts here ========== -->
 
     <!-- ========== bottom header starts here========== -->
+
+    <!--mobile menu starts-->
+    <ul class="navbar-nav mobile-menu">
+        <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="about-us.html">About Us</a>
+        </li>
+
+
+
+        <li class="nav-item">
+            <a class="nav-link" href="#dropdown-list" data-bs-toggle="collapse">Pages <span class="nav-arrow"><i class="fas fa-chevron-right"></i></span></a>
+
+            <ul class="collapse" id="dropdown-list">
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../blog-list-view/blog-list-view.html">Blog list page</a>
+                </li>
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../blog-details-view/blog-details-view.html">Blog details page</a>
+                </li>
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../error-page/error-page.html">Error-page</a>
+                </li>
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../coming-soon-page/coming-soon-page.html">Coming-Soon-page</a>
+                </li>
+            </ul>
+        </li>
+
+
+
+
+        <li class="nav-item">
+            <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#dropdown-list2" data-bs-toggle="collapse">Our Blog <span class="nav-arrow"><i class="fas fa-chevron-right"></i></span></a>
+
+            <ul class="collapse" id="dropdown-list2">
+                                <li class="nav-item border-0">
+                                    <a class="nav-link" href="../blog-grid-view/blog-grid-view.html">Blog grid page</a>
+                                </li>
+                                <li class="nav-item border-0">
+                                    <a class="nav-link" href="../blog-list-view/blog-list-view.html">Blog list page</a>
+                                </li>
+                                <li class="nav-item border-0">
+                                    <a class="nav-link" href="../blog-details-view/blog-details-view.html">Blog details page</a>
+                                </li>
+                            </ul>
+
+        </li>
+        <li class="nav-item border-0">
+            <a class="nav-link" href="../contact-us/contact.html">Contact Us</a>
+        
+        </li>
+
+    </ul>
+
+    <!--mobile menu ends-->
+
     <section id="bottomheader">
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-md ">
             <div class="container">
                 <a class="navbar-brand toggle-brand" href="#"><img src="../assets/images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <button class="toggle-btn-mobile btn">
                     <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
+
+                <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto toggle-navbar">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">Home</a>
